feat(#61): Add security check for local ip addresses in cors proxy
